<resources>
    <string name="app_name">BBA Health</string>
    <string name="title_home">Info</string>
    <string name="title_maps">Maps</string>
    <string name="title_record">Record</string>
    <string name="title_tracker">Journey</string>
    <string name="title_support">Support</string>
    <string name="content_description">View In Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information_fragment">Information Fragment</string>
    <string name="maps_fragment">Maps Fragment</string>
    <string name="tracker_fragment">Tracker Fragment</string>
    <string name="record_fragment">Record Fragment</string>
    <string name="record_your_doctors_session_and_playback_at_any_time">Record your Doctors session and playback at any time</string>
    <string name="view_old_sessions">View old sessions</string>
    <string name="record_session">Record Session</string>
    <string name="back_to_record">Back to record</string>
    <string name="ross">Ross you need to make this design, its the tracker bt-dubs</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="click_a_recording_to_play_rename_or_delete">Click a recording to play, rename or delete</string>
    <string name="add_a_note_to_help_remind_you_of_this_meeting">Add a keyword to help remind you of this meeting</string>
    <string name="other_support">Other Support</string>
    <string name="beacon_telephone">Beacon Telephone:</string>
    <string name="beacon_email">Beacon Email:</string>
    <string name="_01823_344202"><u>01823 344202</u></string>
    <string name="pals_tst_nhs_uk"><u>pals@tst.nhs.uk</u></string>
    <string name="info_view_screen_filler">Info View Screen Filler</string>
    <string name="mri_scan">MRI Scan</string>
    <string name="results_meeting">Results Meeting</string>
    <string name="overall_progress">Overall Progress</string>
    <string name="open_evening">Open Evening</string>
    <string name="find_out_more_information">Find out more information</string>
    <string name="hospital_map"><u>Hospital Map</u></string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="welcome">Welcome</string>
    <string name="app_name_app_is_your_companion_on_the_road_to_recovery">(App Name) app is your companion on the road to recovery</string>
    <string name="keep_track_of_your_progress_throughout_your_treatment_with_relevant_information_every_step_is_one_step_closer_to_recovery">Keep track of your progress throughout your treatment, with relevant information. Every step is one step closer to recovery!</string>
    <string name="select_pathway">Select Pathway</string>
    <string name="if_you_do_not_know_which_pathway_you_are_on_please_check_with_your_consultant">If you do not know which pathway you are on, please check with your consultant.</string>
    <string name="select_cancer">Select Cancer</string>
    <string name="tap_one_or_multiple_to_select_options">Tap one or multiple to select options</string>
    <string name="web_links">Web Links</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus laoreet purus mi. Vestibulum scelerisque, enim sed varius viverra, enim mauris lacinia lectus, et eleifend lectus ipsum eget mi. Donec tempor, nulla non condimentum mattis, est turpis facilisis urna, eget dictum neque ipsum et tortor. Pellentesque ac ex sit amet ipsum rhoncus hendrerit. Nullam vitae arcu ut tellus mollis viverra vel vel felis. Donec sit amet vulputate ipsum. Sed id nulla aliquam turpis interdum tempor. Sed id sapien ante. Duis et nulla egestas, commodo risus ut, tristique ante. Pellentesque viverra ligula vel felis elementum semper. Aliquam condimentum, diam vel imperdiet auctor, risus quam ultrices est, quis ultricies lectus odio at metus. Sed egestas imperdiet dui, vel hendrerit tortor tristique id. Cras nisl elit, gravida auctor tortor eu, ultrices pharetra ipsum. Duis dolor nulla, consequat non gravida sit amet, volutpat varius purus. Nunc rutrum aliquam ante eu ultrices. Nam nec nibh bibendum, tempor magna a, luctus est. Donec aliquam lacus orci, consectetur posuere massa interdum a. Donec volutpat dignissim diam a tristique. Fusce suscipit tortor ut ligula consequat, vitae luctus leo tincidunt. Donec malesuada arcu sed cursus sagittis. Fusce vitae ipsum et est iaculis ullamcorper at eu urna. Sed eros diam, tempus a placerat vel, auctor id quam. Praesent rhoncus ligula sit amet magna dictum, ut commodo metus sollicitudin.</string>
    <string name="side_effects">Side Effects:</string>
    <string name="side_effect_1">- Side Effect 1</string>
    <string name="side_effect_2">- Side Effect 2</string>
    <string name="side_effect_3">- Side Effect 3</string>
    <string name="how_to_relieve_your_symptoms">How to relieve your symptoms</string>
    <string name="_3_week_wait_progress">3 week wait progress...</string>
    <string name="total_rounds_of_treament_week_days">Total rounds of treament (Week Days)</string>
    <string name="treatment_sessions_left">Treatment sessions left</string>
</resources>
