<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_info_screen_image"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_near_me_black_24dp"
        android:title="@string/title_maps"
        />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_fiber_manual_record_black_24dp"
        android:title="@string/title_record"
        />

    <item
        android:id="@+id/navigation_tracker"
        android:icon="@drawable/ic_track_changes_black_24dp"
        android:title="@string/title_tracker"
        />

    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/ic_people"
        android:title="@string/title_support"
        />

</menu>
